- Switched back to uncss 0.14.1 with Phantom JS, because JSDOM version has no option to ignore .js, which causes issues for external resources when developing behind a firewall - Fixed breaking change of precss (migrated from postcss-color-function 'color' to postcss-preset-env 'color-mod')

--- a/app/_assets/styles/base/_base.css
+++ b/app/_assets/styles/base/_base.css
@@ -80,7 +80,7 @@ a {
   text-decoration: none;
   color: $brand-color;
   &:visited {
-    color: color($brand-color shade(15%));
+    color: color-mod($brand-color shade(15%));
   }
   &:hover {
     text-decoration: underline;
